--- a/grocery_app/templates/base.html
+++ b/grocery_app/templates/base.html
@@ -8,16 +8,27 @@
     </head>
     <body>
         <div id="content">
-            {% for message in get_flashed_messages() %}
-                <p>{{ message }}</p>
-            {% endfor %}
             <nav>
                 <a href="/">Home</a>
                 <div>
+                    {% if current_user.is_authenticated %}
                     <a href="/new_store">New Store</a>
                     <a href="/new_item">New Item</a>
+                    {% else %}
+                    <a href="/login">Login</a>
+                    <a href="/signup">Sign up</a>
+                    {% endif %}
                 </div>
             </nav>
+
+            {% if current_user.is_authenticated %}
+                <p>You are logged in as {{ current_user.username }}</p>
+            {% endif %}
+
+            {% for message in get_flashed_messages() %}
+                <p>{{ message }}</p>
+            {% endfor %}
+
             {% block content %}{% endblock %}
         </div>
     </body>
